tests/errors/scalar_body_double_new.dang
# A scalar body may declare at most one new() hook.
scalar Slug {
  new(raw: String!) {
    raw
  }

  new(other: String!) {
    other
  }
}
